--- a/index2.html
+++ b/index2.html
@@ -217,7 +217,7 @@
         }
     </style>
     <div class="page-header"
-        style="padding-top: 9%;background-image:url(assets/img/sliders/home-page/Con-telk.jpg);color: white; min-height: 350px; margin-bottom: -1px;">
+        style="padding-top: 9%;background-image:url(images/back.jpg);color: white; min-height: 350px; margin-bottom: -1px;">
         <div class="col-sm-12">
             <h1 class="pull-left" style="text-shadow: 3px 3px 5px #000000;">Executive Summary</h1>
         </div>
