--- a/index.html
+++ b/index.html
@@ -262,12 +262,13 @@
               electric power lines both overhead and underground and laying of fiber optic(data)cables to utility
               companies. With an experienced team of professionals in the field, modernized equipment and financial
               capability, we have been able to meet our project timelines in adherence to quality standards..</p>
-            <div><a href="power.php"><button class="btn btn-readMore">Read More</button></a></div>
+            <div><a href="ind"><button class="btn btn-readMore">Read More</button></a></div>
           </div>
           <div class="col-sm-12">
             <div class="col-sm-6 service-info" style="padding-top: 9%;">
               <h3>Excutive summary</h3>
-              <p style="font-size: 20px;">Rommelo Technologies is a licensed electrical and building works services contractor under category NCA 8.
+              <p style="font-size: 20px;">Rommelo Technologies is a licensed electrical and building works services
+                contractor under category NCA 8.
                 We have been able to secure a standard and well – positioned office facility at Bevkesh House, Ruiru
                 Town along Thika road. We are an electrical contractor services company that is set to compete in
                 the highly competitive electrical contractor services industry not only in Kenya, but also throughout
@@ -275,7 +276,7 @@
               <div><a href="index2.html"><button class="btn btn-readMore">Read More</button></a></div>
             </div>
             <div class="col-sm-6 text-center service-img">
-              <img src="./assets/img/info-graphics/Constructio TKL-01.png" style="" alt="" title="">
+              
             </div>
           </div>
         </div>
@@ -283,14 +284,23 @@
       <div class="service row" style="background: #f4f4f466;">
         <div class="container">
           <div class="col-sm-7 service-info" style="padding-top: 7%;">
-            <h3>Projects Undertaken</h3>
-            <!-- <p>The Construction division role is to manage and deliver the Contractual Obligation of the following Contracts: BTS Maintenance, fibre maintenance & Fixed data deployment. The most common differential is our ability to maintain and execute high SLA’s, ensuring full-time service availability.</p> -->
-            <p style="font-size: 20px;">We commit ourselves in execution of our projects on time meeting all the quality standards
-              requirements. Below are the contracts undertaken and completed in the last 12 months;</p>
-            <div><a href="index5.html"><button class="btn btn-readMore">Read More</button></a></div>
+            <h3>IMPLEMENTATION, INSTALLATION AND TRAINING</h3>
+              <p style="font-size: 20px;">Jamwe provide project management, planning and implementation, including site
+                supervision,
+                installation and commissioning for projects of all sizes and complexity. Our technical management
+                teams can advise the client on the best selection of products and equipment available from a wide
+                range of suppliers. Our periodic and preventative maintenance service is based on our experience
+                of industry standards and manufacturers recommendations.</p>
+
+              <div><a href="index7.html"><button class="btn btn-readMore">Read More</button></a></div>
           </div>
           <div class="col-sm-5 text-center service-img">
-            <!-- <img src="./assets/img/info-graphics/Ms-01.png" style="" alt="" title=""> -->
+            <h3>Projects Undertaken</h3>
+            <!-- <p>The Construction division role is to manage and deliver the Contractual Obligation of the following Contracts: BTS Maintenance, fibre maintenance & Fixed data deployment. The most common differential is our ability to maintain and execute high SLA’s, ensuring full-time service availability.</p> -->
+            <p style="font-size: 20px;">We commit ourselves in execution of our projects on time meeting all the quality
+              standards
+              requirements. Below are the contracts undertaken and completed in the last 12 months;</p>
+            <div><a href="index5.html"><button class="btn btn-readMore">Read More</button></a></div>
           </div>
         </div>
       </div>
@@ -343,30 +353,30 @@
   <footer>
     <section class="col-sm-12 footer">
       <div class="container">
-          <div class="text-center">
-              <h4 class="ourconts">Contact Us</h4>
-              <hr>
-              <p>PHYSICAL LOCATION: Bevkesh House, Ruiru Town along Thika road. | POSTAL ADDRESS:PO BOX 97-00618,
-                  RUARAKA.
-              </p>
-              <p>Office Tel: +254 722 343243;</p>
-              <p>REGISTRATION NUMBER: PVT/2016/008776</p>
-              <p>KRA PIN NUMBER: P051588135Z</p>
-              <p>LICENCES: NATIONAL CONSTRUCTION AUTHORITY(NCA) </p>
-              <p>Email: rommelotechnologies@gmail.com</p>
-              <div>
-                  <a class="smedia" href="https://www.facebook.com/AdrianKeLtd/" target="_blank"><i
-                          class="fab fa-facebook-square"></i></a>
-                  <a class="smedia" href="https://twitter.com/AdrianKenyaLtd"><i class="fab fa-twitter-square"
-                          target="_blank"></i></a>
-                  <a class="smedia" href="https://www.instagram.com/adriankeltd/"><i class="fab fa-instagram"
-                          target="_blank"></i></i></a>
-                  <a class="smedia" href="https://www.youtube.com/channel/UCH7kfBmCang_J9rmFmQBBZw"><i
-                          class="fab fa-youtube" target="_blank"></i></i></a>
-              </div>
+        <div class="text-center">
+          <h4 class="ourconts">Contact Us</h4>
+          <hr>
+          <p>PHYSICAL LOCATION: Bevkesh House, Ruiru Town along Thika road. | POSTAL ADDRESS:PO BOX 97-00618,
+            RUARAKA.
+          </p>
+          <p>Office Tel: +254 722 343243;</p>
+          <p>REGISTRATION NUMBER: PVT/2016/008776</p>
+          <p>KRA PIN NUMBER: P051588135Z</p>
+          <p>LICENCES: NATIONAL CONSTRUCTION AUTHORITY(NCA) </p>
+          <p>Email: rommelotechnologies@gmail.com</p>
+          <div>
+            <a class="smedia" href="https://www.facebook.com/AdrianKeLtd/" target="_blank"><i
+                class="fab fa-facebook-square"></i></a>
+            <a class="smedia" href="https://twitter.com/AdrianKenyaLtd"><i class="fab fa-twitter-square"
+                target="_blank"></i></a>
+            <a class="smedia" href="https://www.instagram.com/adriankeltd/"><i class="fab fa-instagram"
+                target="_blank"></i></i></a>
+            <a class="smedia" href="https://www.youtube.com/channel/UCH7kfBmCang_J9rmFmQBBZw"><i class="fab fa-youtube"
+                target="_blank"></i></i></a>
           </div>
+        </div>
       </div>
-  </section>
+    </section>
     <div class="col-sm-12 company text-center">
       <div class="row">
         <div class="col-md-4"></div>
