--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             </ul>
           </li>
 
-          <li><a href="contact-us.php">Contacts</a></li>
+          <li><a href="index9.html">Contacts</a></li>
         </ul>
       </nav>
       <!-- /main nav -->
@@ -307,7 +307,14 @@
       <div class="service">
         <div class="container">
           <div class="col-sm-5 text-center service-img">
-            <img src="./assets/img/info-graphics/Commercial.png" style="" alt="" title="">
+            <h3>QUALITY MANAGEMENT POLICY AND ENVIRONMENTAL CONSERVASION POLICY</h3>
+            <p>We regard safety as paramount in the delivery of all our services and operate a Safety
+              Management System (SMS). The SMS adopts the principles of the HSE guidance “Successful
+              Health and Safety Management” and is operated in full compliance with all current safety
+              legislation. Our Safety, Health and Welfare policy document, details our commitment to safeguard
+              our personnel and third parties against accidents or incidents in and around the workplace. Within
+              our SMS, emphasis is placed upon:</p>
+            <div><a href="index8.html"><button class="btn btn-readMore">Read More</button></a></div>
           </div>
           <div class="col-sm-7 service-info" style="padding-top: 7%;">
             <h3>HEALTH AND SAFETY</h3>
