--- a/index6.html
+++ b/index6.html
@@ -113,7 +113,7 @@
                         </ul>
                     </li>
 
-                    <li><a href="contact-us.php">Contacts</a></li>
+                    <li><a href="index9.html">Contacts</a></li>
                 </ul>
             </nav>
             <!-- /main nav -->
