--- a/index8.html
+++ b/index8.html
@@ -2,124 +2,124 @@
 <html lang="en">
 
 <head>
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="" />
-  <meta name="keywords" content="Telecommunication, Power & Energy, ICT" />
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="" />
+    <meta name="keywords" content="Telecommunication, Power & Energy, ICT" />
 
-  <meta name="author" content="Judi Chepkemoi Inc">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="author" content="Judi Chepkemoi Inc">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <meta
-    content="Rommelo Technologiesstrives for continued improvement in provision of end-to-end solutions in Energy, Telecommunication, & ICT. Adrian has strategically positioned itself as a market leader and disruptor to ensure we define the service excellence in this period of ICT transformation that requires extensive innovation and merging of technologies."
-    name="description" />
-  <meta content="http://adriankenya.com//img/Security.jpg" property="og:image" />
-  <meta content="http://adriankenya.com/" property="og:url" />
-  <meta content="Rommelo Technologies" property="og:title" />
-  <meta
-    content="Rommelo Technologies strives for continued improvement in provision of end-to-end solutions in Energy, Telecommunication, & ICT. Adrian has strategically positioned itself as a market leader and disruptor to ensure we define the service excellence in this period of ICT transformation that requires extensive innovation and merging of technologies." />
-  <link rel="shortcut icon" href="images/favicon-16x16.png">
+    <meta
+        content="Rommelo Technologiesstrives for continued improvement in provision of end-to-end solutions in Energy, Telecommunication, & ICT. Adrian has strategically positioned itself as a market leader and disruptor to ensure we define the service excellence in this period of ICT transformation that requires extensive innovation and merging of technologies."
+        name="description" />
+    <meta content="http://adriankenya.com//img/Security.jpg" property="og:image" />
+    <meta content="http://adriankenya.com/" property="og:url" />
+    <meta content="Rommelo Technologies" property="og:title" />
+    <meta
+        content="Rommelo Technologies strives for continued improvement in provision of end-to-end solutions in Energy, Telecommunication, & ICT. Adrian has strategically positioned itself as a market leader and disruptor to ensure we define the service excellence in this period of ICT transformation that requires extensive innovation and merging of technologies." />
+    <link rel="shortcut icon" href="images/favicon-16x16.png">
 
-  <!-- Bootstrap CSS -->
-  <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-    integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css"
-    integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="./assets/plugins/OwlCarousel2-2.2.1/owl.carousel.css">
-  <link rel="stylesheet" type="text/css" href="./assets/plugins/OwlCarousel2-2.2.1/animate.css">
-  <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700" rel="stylesheet">
-  <link rel="stylesheet" href="./assets/css/main.css">
-  <link rel="stylesheet" href="./assets/css/slider.css">
+    <!-- Bootstrap CSS -->
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+        integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css"
+        integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="./assets/plugins/OwlCarousel2-2.2.1/owl.carousel.css">
+    <link rel="stylesheet" type="text/css" href="./assets/plugins/OwlCarousel2-2.2.1/animate.css">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700" rel="stylesheet">
+    <link rel="stylesheet" href="./assets/css/main.css">
+    <link rel="stylesheet" href="./assets/css/slider.css">
 
 
 
-  <title>ROMMELO TECHNOLOGIES</title>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-84783047-3"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
+    <title>ROMMELO TECHNOLOGIES</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-84783047-3"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
 
-    gtag('config', 'UA-84783047-3');
-  </script>
+        gtag('config', 'UA-84783047-3');
+    </script>
 
 </head>
 
 <body>
-  <style type="text/css">
-    .no-js #loader {
-      display: none;
-    }
+    <style type="text/css">
+        .no-js #loader {
+            display: none;
+        }
 
-    .js #loader {
-      display: block;
-      position: absolute;
-      left: 100px;
-      top: 0;
-    }
+        .js #loader {
+            display: block;
+            position: absolute;
+            left: 100px;
+            top: 0;
+        }
 
-    .se-pre-con {
-      position: fixed;
-      left: 0px;
-      top: 0px;
-      width: 100%;
-      height: 100%;
-      z-index: 9999;
-      background: url(assets/gif/GIF.gif) center no-repeat #fff;
-    }
-  </style>
-  <div class="se-pre-eeecon"></div>
-  <!-- 
+        .se-pre-con {
+            position: fixed;
+            left: 0px;
+            top: 0px;
+            width: 100%;
+            height: 100%;
+            z-index: 9999;
+            background: url(assets/gif/GIF.gif) center no-repeat #fff;
+        }
+    </style>
+    <div class="se-pre-eeecon"></div>
+    <!-- 
         Fixed Navigation
         ==================================== -->
-  <header id="navigation" class="navbar-fixed-top navbar">
-    <div class="container">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <!-- /responsive nav button -->
+    <header id="navigation" class="navbar-fixed-top navbar">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <!-- /responsive nav button -->
 
-        <!-- logo -->
-        <a class="navbar-brand" href="index.html">
-          <div id="logo">
-            <img id="logo3" src="images/favicon-16x16.png" alt="Rommelo">
-          </div>
-        </a>
-        <!-- /logo -->
-      </div>
+                <!-- logo -->
+                <a class="navbar-brand" href="index.html">
+                    <div id="logo">
+                        <img id="logo3" src="images/favicon-16x16.png" alt="Rommelo">
+                    </div>
+                </a>
+                <!-- /logo -->
+            </div>
 
-      <!-- main nav -->
-      <nav class="collapse navbar-collapse navbar-right" role="navigation">
-        <ul class="nav navbar-nav">
-          <li><a href="index.html">Home</a></li>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-              aria-expanded="false">About <span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li><a href="index1.html">Who We Are</a></li>
-              <li><a href="index3.html">Organization</a></li>
-              <li><a href="gallery.php">Gallery</a></li>
-              <!--                             <li><a href="downloads.php">Downloads</a></li>
+            <!-- main nav -->
+            <nav class="collapse navbar-collapse navbar-right" role="navigation">
+                <ul class="nav navbar-nav">
+                    <li><a href="index.html">Home</a></li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                            aria-expanded="false">About <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="index1.html">Who We Are</a></li>
+                            <li><a href="index3.html">Organization</a></li>
+                            <li><a href="gallery.php">Gallery</a></li>
+                            <!--                             <li><a href="downloads.php">Downloads</a></li>
  -->
-            </ul>
-          </li>
+                        </ul>
+                    </li>
 
-          <li><a href="index9.html">Contacts</a></li>
-        </ul>
-      </nav>
-      <!-- /main nav -->
+                    <li><a href="index9.html">Contacts</a></li>
+                </ul>
+            </nav>
+            <!-- /main nav -->
 
-    </div>
-  </header>
+        </div>
+    </header>
     <!--
         End Fixed Navigation
         ==================================== -->
@@ -241,7 +241,7 @@
     <div class="page-header"
         style="padding-top: 10%;background-image:url(images/back.jpg);color: white; min-height: 350px; margin-bottom: -1px; background-size: cover;">
         <div class="col-sm-12">
-            <h1 class="pull-left" style="text-shadow: 3px 3px 5px #000000;">About Rommelo Technologies</h1>
+            <h1 class="pull-left" style="text-shadow: 3px 3px 5px #000000;">POLICIES</h1>
         </div>
     </div>
 
@@ -267,34 +267,37 @@
 
     <div class="col-sm-12">
         <div class="container">
-            <h2 class="text-center title" style="padding-bottom: 30px;">Introduction</h2>
+            <h2 class="text-center title" style="padding-bottom: 30px;">QUALITY MANAGEMENT POLICY </h2>
             <div class="col-sm-12">
-                <p class="text-left">Rommelo Technologies was incorporated in the year 2016 as an electrical and civil
-                    engineering solutions provider.</p>
-                <p>The company has been successful inexecution of construction of electric power lines both
-                    overhead and underground and laying of fiber optic(data)cables to utility companies. With an
-                    experienced team of professionals in the field, modernized equipment and financial capability, we
-                    have been able to meet our project timelines in adherence to quality standards.</p>
+                <p class="text-left">Jamwe Limited provides a quality system that delivers to our customers and clients
+                    value added
+                    benefits, by developing long term relationships to better understand customer needs and ensure
+                    both suppliers and sub-contractors live up to the standards required.</p>
+                <p>In line with our QMS procedures, a quality plan will be developed for the project which will detail
+                    the critical check and hold points for test and inspection for the scope of our supply. All quality
+                    plans are site specific and are produced in close conjunction with client’s specific requirements.
+                    Site Management and Supervision apply the Quality Plan and maintain a professional approach
+                    to quality and disciplined record keeping. On site Quality meetings, periodic audits, and project
+                    Close Out Meetings are held to ensure the project quality objectives are reviewed and met.
+                    Customer and Client feedback is welcome at all times, so that we can better understand how we
+                    are performing in the eyes of the customer and do our very best to ensure we provide a
+                    competitive advantage due to our standards of quality and our reputation in the marketplace.</p>
+                <h2 class="text-center title" style="padding-bottom: 30px;">ENVIRONMENTAL CONSERVASION POLICY</h2>
+                <p>Our policy at Jamwe limited is to recognize our responsibility to protect the environment and
+                    minimize any adverse environmental impact of its activities, as far as is safe, practicable and
+                    economical, with the objective of being incident free. It is also our practice to identify areas of
+                    opportunity to develop an environmentally sustainable business. This is carried out at an overall
+                    business management, and project-by-project level upon review of project specific environmental
+                    and sustainability aspects and impacts.</p>
+
+
+
                 <div class="col-sm-12">
-                    <div class="col-sm-6 text-center">
-                        <!-- <img src="assets/img/icons/Vision.png" style="width: 300px;" class="text-center"> -->
-                        <h3 style="color: #e8002d;font-size: 30px;font-weight: bold;">Vision</h3>
-                        <p style=" font-size: 20px;color: #273277;">To be the leading electrical and civil Engineering
-                            provider. Through provision of quality, cost
-                            effective services to our customers.</p>
-                    </div>
-                    <div class="col-sm-6 text-center">
-                        <!-- <img src="assets/img/icons/Mission.png" style="width: 300px;" class="text-center"> -->
-                        <h3 style="color: #e8002d;font-size: 30px;font-weight: bold;">Mission</h3>
-                        <p style="font-size: 20px; color: #273277;">Enriching lives through engineering and energy
-                            solutions. Jamwe limited has its central mission
-                            through teamwork, the carrying out of any undertaking safely, professionally and with
-                            excellence within the industry.</p>
-                    </div>
+                    
 
                     <!-- <div class="col-sm-12">
                         <h4 style="font-size: 20px; color: #656565;">Our Core Values</h4> -->
-                        <!-- <ul>
+                    <!-- <ul>
                             <li><acronym><b>A</b>ccountability</acronym>: We are champions of our company and we do that
                                 we say we shall do. We act with openness, integrity and trust.</li>
                             <li><acronym><b>D</b>rive</acronym>: We are relentless in our pursuit of success and we
@@ -336,8 +339,8 @@
                     <p>Customer Focus: Flexible and adaptive to client requirement.</p>
                 </div>
             </div> -->
-        </div>
-        <!-- <div class="container">
+    </div>
+    <!-- <div class="container">
             <div class="col-sm-12">
                 <h2 class="text-center title">Awards & Recognitions</h2>
                 <div class="row awards-list">
@@ -467,9 +470,9 @@
                             </div>
                         </li>
                     </ul> -->
-                </div>
-            </div>
-        </div>
+    </div>
+    </div>
+    </div>
     </div>
     <style type="text/css">
         .freebirdFormviewerViewFooterDisclaimer {
