--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
   </style>
   <div class="home">
     <video autoplay muted loop id="myVideo">
-      <!-- <source src="images/video.mp4" type="video/mp4"> -->
+      <source src="images/video.mp4" type="video/mp4">
       Your browser does not support HTML5 video.
     </video>
     <!-- Start Hero Slider -->
