--- a/index.html
+++ b/index.html
@@ -135,46 +135,7 @@
       <source src="images/video.mp4" type="video/mp4">
       Your browser does not support HTML5 video.
     </video>
-    <!-- Start Hero Slider -->
-    <!-- <div class="hero_slider_container">
-      <div class="hero_slider owl-carousel">
-        <div class="hero_slide">
-          <div class="hero_slide_background" style="background-image:url(assets/img/sliders/home-page/fibre.jpg)"></div>
-          <div class="hero_slide_container d-flex flex-column align-items-center justify-content-center">
-            <div class="hero_slide_content text-center">
-              <h1 data-animation-in="fadeInUp" data-animation-out="animate-out fadeOut">Fibre Back-bone & User End Deployment</h1>
-            </div>
-          </div>
-        </div>       
-        <div class="hero_slide">
-          <div class="hero_slide_background" style="background-image:url(assets/img/sliders/home-page/substations.jpeg)"></div>
-          <div class="hero_slide_container d-flex flex-column align-items-center justify-content-center">
-            <div class="hero_slide_content text-center">
-              <h1 data-animation-in="fadeInUp" data-animation-out="animate-out fadeOut">Power infrustructure constraction</h1>
-            </div>
-          </div>
-        </div>
-        <div class="hero_slide">
-          <div class="hero_slide_background" style="background-image:url(assets/img/sliders/home-page/tower.JPG)"></div>
-          <div class="hero_slide_container d-flex flex-column align-items-center justify-content-center">
-            <div class="hero_slide_content text-center">
-              <h1 data-animation-in="fadeInUp" data-animation-out="animate-out fadeOut">BTS Maintenance & Telecommunication infrastructure constraction</h1>
-            </div>
-          </div>
-        </div>
-        <div class="hero_slide">
-          <div class="hero_slide_background" style="background-image:url(assets/img/sliders/home-page/solar-plant.jpg)"></div>
-          <div class="hero_slide_container d-flex flex-column align-items-center justify-content-center">
-            <div class="hero_slide_content text-center">
-              <h1 data-animation-in="fadeInUp" data-animation-out="animate-out fadeOut">Renewable energy solutions for BTS sites</h1>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="hero_slider_left hero_slider_nav trans_200"><i class="fas fa-chevron-left"></i></div>
-      <div class="hero_slider_right hero_slider_nav trans_200"><i class="fas fa-chevron-right"></i></div>
-    </div> -->
-    <!-- End Hero Slider -->
+   
   </div>
 
   <style type="text/css">
@@ -256,7 +217,7 @@
             <img src="images/cable-clouds-current-722700.jpg" style="" alt="" title="">
           </div>
           <div class="col-sm-7 service-info" style="padding-top: 5%;">
-            <h3>Introdution</h3>
+            <h3>Introduction</h3>
             <p style="font-size: 20px;">Rommelo Technologies was incorporated in the year 2016 as an electrical and
               civil engineering solutions provider. The company has been successful inexecution of construction of
               electric power lines both overhead and underground and laying of fiber optic(data)cables to utility
@@ -308,7 +269,7 @@
         <div class="container">
           <div class="col-sm-5 text-center service-img">
             <h3>QUALITY MANAGEMENT POLICY AND ENVIRONMENTAL CONSERVASION POLICY</h3>
-            <p>We regard safety as paramount in the delivery of all our services and operate a Safety
+            <p style="font-size: 20px;">We regard safety as paramount in the delivery of all our services and operate a Safety
               Management System (SMS). The SMS adopts the principles of the HSE guidance “Successful
               Health and Safety Management” and is operated in full compliance with all current safety
               legislation. Our Safety, Health and Welfare policy document, details our commitment to safeguard
