--- a/index2.html
+++ b/index2.html
@@ -235,59 +235,33 @@
     <div class="col-sm-12">
         <div class="container">
             <h2 class="text-center title" style="padding-bottom: 10px;">Executive</h2>
-            <p class="text-center">Jamwe limited is a licensed electrical and building works services contractor under
+            <p class="text-center" style="font-size: 20px;">Jamwe limited is a licensed electrical and building works services contractor under
                 category NCA 8.
                 We have been able to secure a standard and well – positioned office facility at Bevkesh House, Ruiru
                 Town along Thika road. We are an electrical contractor services company that is set to compete in
                 the highly competitive electrical contractor services industry not only in Kenya, but also throughout
                 Africa..</p>
-            <p class="text-center">Jamwe limited executes electrical work at sites such as construction of powerlines on
+            <p class="text-center" style="font-size: 20px;">Jamwe limited executes electrical work at sites such as construction of powerlines on
                 overhead
                 and underground ranges, fiber optic cable installation etc. Basically, we provide services such as
                 electric power and systems installation and servicing, telecommunications installation and
                 servicing, fire and security system installation and servicing, electronic control system installation
                 and servicing.</p>
-            <p>Our business goal is to become one of the leading electrical contractor service companies in Kenya
+            <p style="font-size: 20px;">Our business goal is to become one of the leading electrical contractor service companies in Kenya
                 and we make sure that we do all we can to compete favorably with leaders in the industry.</p>
 
-            <p>Our workers are selected from a pool of certified and highly experienced electrical technicians and
+            <p style="font-size: 20px;">Our workers are selected from a pool of certified and highly experienced electrical technicians and
                 tradesmen (electricians) with different area of expertise as it relates to our service offerings in and
                 around the country.
                 We make sure that we take all the members of our workforce through the required trainings that
                 position them to meet the expectation of the company and to compete with leading electrical
                 contractor services companies.</p>
-            <p>At Jamwe limited, our client’s best interest always come first, and everything we do is guided by
+            <p style="font-size: 20px;">At Jamwe limited, our client’s best interest always come first, and everything we do is guided by
                 our values and professional ethics. We ensure that we hold ourselves accountable to the highest
                 standards by meeting our client’s needs precisely and completely. We cultivate a working
                 environment that provides a human, sustainable approach to earning a living, and living in our
                 world, for all our partners, employees and for our clients.</p>
-            <div class="row awards-list">
-                <ul>
-                    <li>
-                        <div class="awards-list__graphic" style="background-image: url(assets/img/icons/Const-01.png);">
-                        </div>
-                    </li>
-
-                    <li>
-                        <div class="awards-list__graphic" style="background-image: url(assets/img/icons/Const-02.png);">
-                        </div>
-                    </li>
-
-                    <li>
-                        <div class="awards-list__graphic" style="background-image: url(assets/img/icons/Const-03.png);">
-                        </div>
-                    </li>
-
-                    <li>
-                        <div class="awards-list__graphic" style="background-image: url(assets/img/icons/Const-04.png);">
-                        </div>
-                    </li>
-                    <li>
-                        <div class="awards-list__graphic" style="background-image: url(assets/img/icons/Const-05.png);">
-                        </div>
-                    </li>
-                </ul>
-            </div>
+            
             <!-- <div class="col-sm-12 text-center steps">
 			<div class="col-sm-3 col-xs-6 step">
 				<i class="fas fa-cog"></i>
