--- a/index3.html
+++ b/index3.html
@@ -250,7 +250,7 @@
     <div class="col-sm-12" style="background: #fff; padding: 30px 0 30px 0;">
         <div class="container">
             <h2 class="text-center title" style="padding: 10px 0 30px 0;">Management Team and Organization Structure</h2>
-            <p>With our able team of management. We have recognized human resource as the best investment
+            <p style="font-size: 20px;">With our able team of management. We have recognized human resource as the best investment
                 to our company. This is by employing the best, continuous training and a promised future. We
                 embrace teamwork and encourage each of our staff to always stick to the laid down work ethics.
                 We have continuously offered training to our employees and providing them with modernized
