--- a/index5.html
+++ b/index5.html
@@ -237,10 +237,10 @@
     <div class="col-sm-12">
         <div class="container">
             <h2 class="text-center title" style="padding-bottom: 10px">Projects Undertaken</h2>
-            <p class="text-center">We provide Operational, maintenance and support service in telecommunication and
+            <p class="text-center" style="font-size: 20px;">We provide Operational, maintenance and support service in telecommunication and
                 Power Industries for infrastructure and services</p>
 
-            <table>
+            <table style="font-size: 20px;">
                 <tr>
                     <th>NO</th>
                     <th>CONTRACT NO</th>
