--- a/index7.html
+++ b/index7.html
@@ -269,13 +269,13 @@
         <div class="container">
             <h2 class="text-center title" style="padding-bottom: 30px;">IMPLEMENTATION, INSTALLATION AND TRAINING</h2>
             <div class="col-sm-12">
-                <p class="text-left">Rommelo Technologies provide project management, planning and implementation, including site supervision,
+                <p class="text-left"style="font-size: 20px;">Rommelo Technologies provide project management, planning and implementation, including site supervision,
                     installation and commissioning for projects of all sizes and complexity. Our technical management
                     teams can advise the client on the best selection of products and equipment available from a wide
                     range of suppliers. Our periodic and preventative maintenance service is based on our experience
                     of industry standards and manufacturers recommendations.</p>
-                <p>Jamwe provides all necessary installation services including:</p>
-                <ul>
+                <p style="font-size: 20px;">Jamwe provides all necessary installation services including:</p>
+                <ul style="font-size: 20px;">
                     <li>Topographical surveys, setting and marking out.</li>
                     <li>Cable trench excavation and construction, pit and duct systems, foundation construction</li>
                     <li>Construction of electric power lines both overhead and underground.</li>
@@ -284,22 +284,7 @@
                     <li>Testing and Commissioning</li>
                 </ul>
 
-                <div class="col-sm-12">
-                    <div class="col-sm-6 text-center">
-                        <!-- <img src="assets/img/icons/Vision.png" style="width: 300px;" class="text-center"> -->
-                        <h3 style="color: #e8002d;font-size: 30px;font-weight: bold;">Vision</h3>
-                        <p style=" font-size: 20px;color: #273277;">To be the leading electrical and civil Engineering
-                            provider. Through provision of quality, cost
-                            effective services to our customers.</p>
-                    </div>
-                    <div class="col-sm-6 text-center">
-                        <!-- <img src="assets/img/icons/Mission.png" style="width: 300px;" class="text-center"> -->
-                        <h3 style="color: #e8002d;font-size: 30px;font-weight: bold;">Mission</h3>
-                        <p style="font-size: 20px; color: #273277;">Enriching lives through engineering and energy
-                            solutions. Jamwe limited has its central mission
-                            through teamwork, the carrying out of any undertaking safely, professionally and with
-                            excellence within the industry.</p>
-                    </div>
+                
 
                     <!-- <div class="col-sm-12">
                         <h4 style="font-size: 20px; color: #656565;">Our Core Values</h4> -->
