--- a/index1.html
+++ b/index1.html
@@ -269,9 +269,9 @@
         <div class="container">
             <h2 class="text-center title" style="padding-bottom: 30px;">Introduction</h2>
             <div class="col-sm-12">
-                <p class="text-left">Rommelo Technologies was incorporated in the year 2016 as an electrical and civil
+                <p class="text-left" style="font-size: 20px;">Rommelo Technologies was incorporated in the year 2016 as an electrical and civil
                     engineering solutions provider.</p>
-                <p>The company has been successful inexecution of construction of electric power lines both
+                <p style="font-size: 20px;">The company has been successful inexecution of construction of electric power lines both
                     overhead and underground and laying of fiber optic(data)cables to utility companies. With an
                     experienced team of professionals in the field, modernized equipment and financial capability, we
                     have been able to meet our project timelines in adherence to quality standards.</p>
