--- a/index6.html
+++ b/index6.html
@@ -235,31 +235,31 @@
     <div class="col-sm-12">
         <div class="container">
             <h2 class="text-center title" style="padding-bottom: 20px;">Health and Safety</h2>
-            <p class="text-left">We regard safety as paramount in the delivery of all our services and operate a Safety
+            <p class="text-left" style="font-size: 20px;" >We regard safety as paramount in the delivery of all our services and operate a Safety
                 Management System (SMS). The SMS adopts the principles of the HSE guidance “Successful
                 Health and Safety Management” and is operated in full compliance with all current safety
                 legislation. Our Safety, Health and Welfare policy document, details our commitment to safeguard
                 our personnel and third parties against accidents or incidents in and around the workplace. Within
                 our SMS, emphasis is placed upon:</p>
-            <ul>
+            <ul style="font-size: 20px;">
                 <li>Hazard Identification and Analysis</li>
                 <li>Risk Assessments</li>
                 <li>Training and Awareness</li>
                 <li>Control of Sub Contractors</li>
             </ul>
-            <p>We have an excellent system of ensuring our employees are made aware of the hazards they are
+            <p style="font-size: 20px;">We have an excellent system of ensuring our employees are made aware of the hazards they are
                 facing, and control measures are put in place to minimize the risks. We place a great deal of
                 emphasis to on-site and workshop awareness, inductions, competency and ongoing toolbox talks
                 to ensure our employees and sub-contractors take the necessary due care and attention and
                 continue to work as safely as possible</p>
-            <p>Our professional approach to safety continues to result in an excellent safety record. In setting
+            <p style="font-size: 20px;">Our professional approach to safety continues to result in an excellent safety record. In setting
                 Health and Safety objectives for the company, the general principle is to aim for Accident and
                 Incident Free in all that we do. Recognizing that the working environment is not ‘Risk Free’, we
                 aim, as far as reasonably practicable, to minimize the risk of injury or work related ill health to an
                 absolute minimum</p>
-            <p>In recognition of our excellent health and safety performance and very low accident rate our
+            <p style="font-size: 20px;">In recognition of our excellent health and safety performance and very low accident rate our
                 Health and Safety objectives are:</p>
-            <ul>
+            <ul style="font-size: 20px;">
                 <li>Zero lost time accidents.</li>
                 <li>To ensure site requirements are fully satisfied, recognized by client feedback and high
                     customer satisfaction scores on health and safety. Taking action should there be any
