--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
               electric power lines both overhead and underground and laying of fiber optic(data)cables to utility
               companies. With an experienced team of professionals in the field, modernized equipment and financial
               capability, we have been able to meet our project timelines in adherence to quality standards..</p>
-            <div><a href="ind"><button class="btn btn-readMore">Read More</button></a></div>
+            <div><a href="index1.html"><button class="btn btn-readMore">Read More</button></a></div>
           </div>
           <div class="col-sm-12">
             <div class="col-sm-6 service-info" style="padding-top: 9%;">
