--- a/index8.html
+++ b/index8.html
@@ -499,43 +499,48 @@
             opacity: 1;
         }
     </style>
-    <footer>
-        <section class="col-sm-12 footer">
-            <div class="container">
+    <footer class="footer">
+            <section class="col-sm-12 footer">
+              <div class="container">
                 <div class="text-center">
-                    <h4 class="ourconts">Contact Us</h4>
-                    <hr>
-                    <p>PHYSICAL LOCATION: Bevkesh House, Ruiru Town along Thika road. | POSTAL ADDRESS:PO BOX 97-00618,
-                        RUARAKA.
-                    </p>
-                    <p>Office Tel: +254 722 343243;</p>
-                    <p>REGISTRATION NUMBER: PVT/2016/008776</p>
-                    <p>KRA PIN NUMBER: P051588135Z</p>
-                    <p>LICENCES: NATIONAL CONSTRUCTION AUTHORITY(NCA) </p>
-                    <p>Email: rommelotechnologies@gmail.com</p>
-                    <div>
-                        <a class="smedia" href="https://www.facebook.com/AdrianKeLtd/" target="_blank"><i
-                                class="fab fa-facebook-square"></i></a>
-                        <a class="smedia" href="https://twitter.com/AdrianKenyaLtd"><i class="fab fa-twitter-square"
-                                target="_blank"></i></a>
-                        <a class="smedia" href="https://www.instagram.com/adriankeltd/"><i class="fab fa-instagram"
-                                target="_blank"></i></i></a>
-                        <a class="smedia" href="https://www.youtube.com/channel/UCH7kfBmCang_J9rmFmQBBZw"><i
-                                class="fab fa-youtube" target="_blank"></i></i></a>
-                    </div>
+                  <h4 class="ourconts">Contact Us</h4>
+                  <hr>
+                  <p>PHYSICAL LOCATION: Bevkesh House, Ruiru Town along Thika road. | POSTAL ADDRESS:PO BOX 97-00618,
+                    RUARAKA.
+                  </p>
+                  <p>Office Tel: +254 722 343243;</p>
+                  <p>REGISTRATION NUMBER: PVT/2016/008776</p>
+                  <p>KRA PIN NUMBER: P051588135Z</p>
+                  <p>LICENCES: NATIONAL CONSTRUCTION AUTHORITY(NCA) </p>
+                  <p>Email: rommelotechnologies@gmail.com</p>
+                  <div>
+                    <a class="smedia" href="https://www.facebook.com/" target="_blank"><i
+                        class="fab fa-facebook-square"></i></a>
+                    <a class="smedia" href="https://twitter.com/"><i class="fab fa-twitter-square"
+                        target="_blank"></i></a>
+                    <a class="smedia" href="https://www.instagram.com/"><i class="fab fa-instagram"
+                        target="_blank"></i></i></a>
+                    <a class="smedia" href="https://www.youtube.com/"><i class="fab fa-youtube"
+                        target="_blank"></i></i></a>
+                  </div>
                 </div>
-            </div>
-        </section>
-        <div class="col-sm-12 company text-center">
-            <div class="row">
+              </div>
+            </section>
+            <div class="col-sm-12 company text-center">
+              <div class="row">
                 <div class="col-md-4"></div>
                 <div class="col-md-4">
-                    <p>&copy; Copyright: 2018 | Judi Chepkemoi Inc</p>
+                  <p>&copy; Copyright: 2019 | Judi Chepkemoi Inc</p>
                 </div>
                 <div class="col-md-4"></div>
+              </div>
             </div>
-        </div>
-    </footer>
+          </footer>
+          <style>
+            .footer{
+              background-color:greenyellow;
+            }
+          </style>
 
 
     <script
