--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
       <source src="images/video.mp4" type="video/mp4">
       Your browser does not support HTML5 video.
     </video>
-   
+
   </div>
 
   <style type="text/css">
@@ -237,7 +237,7 @@
               <div><a href="index2.html"><button class="btn btn-readMore">Read More</button></a></div>
             </div>
             <div class="col-sm-6 text-center service-img">
-              
+
             </div>
           </div>
         </div>
@@ -246,14 +246,14 @@
         <div class="container">
           <div class="col-sm-7 service-info" style="padding-top: 7%;">
             <h3>IMPLEMENTATION, INSTALLATION AND TRAINING</h3>
-              <p style="font-size: 20px;">Jamwe provide project management, planning and implementation, including site
-                supervision,
-                installation and commissioning for projects of all sizes and complexity. Our technical management
-                teams can advise the client on the best selection of products and equipment available from a wide
-                range of suppliers. Our periodic and preventative maintenance service is based on our experience
-                of industry standards and manufacturers recommendations.</p>
+            <p style="font-size: 20px;">Jamwe provide project management, planning and implementation, including site
+              supervision,
+              installation and commissioning for projects of all sizes and complexity. Our technical management
+              teams can advise the client on the best selection of products and equipment available from a wide
+              range of suppliers. Our periodic and preventative maintenance service is based on our experience
+              of industry standards and manufacturers recommendations.</p>
 
-              <div><a href="index7.html"><button class="btn btn-readMore">Read More</button></a></div>
+            <div><a href="index7.html"><button class="btn btn-readMore">Read More</button></a></div>
           </div>
           <div class="col-sm-5 text-center service-img">
             <h3>Projects Undertaken</h3>
@@ -269,7 +269,8 @@
         <div class="container">
           <div class="col-sm-5 text-center service-img">
             <h3>QUALITY MANAGEMENT POLICY AND ENVIRONMENTAL CONSERVASION POLICY</h3>
-            <p style="font-size: 20px;">We regard safety as paramount in the delivery of all our services and operate a Safety
+            <p style="font-size: 20px;">We regard safety as paramount in the delivery of all our services and operate a
+              Safety
               Management System (SMS). The SMS adopts the principles of the HSE guidance “Successful
               Health and Safety Management” and is operated in full compliance with all current safety
               legislation. Our Safety, Health and Welfare policy document, details our commitment to safeguard
@@ -318,43 +319,49 @@
       opacity: 1;
     }
   </style>
-  <footer>
-    <section class="col-sm-12 footer">
-      <div class="container">
-        <div class="text-center">
-          <h4 class="ourconts">Contact Us</h4>
-          <hr>
-          <p>PHYSICAL LOCATION: Bevkesh House, Ruiru Town along Thika road. | POSTAL ADDRESS:PO BOX 97-00618,
-            RUARAKA.
-          </p>
-          <p>Office Tel: +254 722 343243;</p>
-          <p>REGISTRATION NUMBER: PVT/2016/008776</p>
-          <p>KRA PIN NUMBER: P051588135Z</p>
-          <p>LICENCES: NATIONAL CONSTRUCTION AUTHORITY(NCA) </p>
-          <p>Email: rommelotechnologies@gmail.com</p>
-          <div>
-            <a class="smedia" href="https://www.facebook.com/AdrianKeLtd/" target="_blank"><i
-                class="fab fa-facebook-square"></i></a>
-            <a class="smedia" href="https://twitter.com/AdrianKenyaLtd"><i class="fab fa-twitter-square"
-                target="_blank"></i></a>
-            <a class="smedia" href="https://www.instagram.com/adriankeltd/"><i class="fab fa-instagram"
-                target="_blank"></i></i></a>
-            <a class="smedia" href="https://www.youtube.com/channel/UCH7kfBmCang_J9rmFmQBBZw"><i class="fab fa-youtube"
-                target="_blank"></i></i></a>
+  <footer class="footer">
+      <section class="col-sm-12 footer">
+        <div class="container">
+          <div class="text-center">
+            <h4 class="ourconts">Contact Us</h4>
+            <hr>
+            <p>PHYSICAL LOCATION: Bevkesh House, Ruiru Town along Thika road. | POSTAL ADDRESS:PO BOX 97-00618,
+              RUARAKA.
+            </p>
+            <p>Office Tel: +254 722 343243;</p>
+            <p>REGISTRATION NUMBER: PVT/2016/008776</p>
+            <p>KRA PIN NUMBER: P051588135Z</p>
+            <p>LICENCES: NATIONAL CONSTRUCTION AUTHORITY(NCA) </p>
+            <p>Email: rommelotechnologies@gmail.com</p>
+            <div>
+              <a class="smedia" href="https://www.facebook.com/" target="_blank"><i
+                  class="fab fa-facebook-square"></i></a>
+              <a class="smedia" href="https://twitter.com/"><i class="fab fa-twitter-square"
+                  target="_blank"></i></a>
+              <a class="smedia" href="https://www.instagram.com/"><i class="fab fa-instagram"
+                  target="_blank"></i></i></a>
+              <a class="smedia" href="https://www.youtube.com/"><i class="fab fa-youtube"
+                  target="_blank"></i></i></a>
+            </div>
           </div>
         </div>
-      </div>
-    </section>
-    <div class="col-sm-12 company text-center">
-      <div class="row">
-        <div class="col-md-4"></div>
-        <div class="col-md-4">
-          <p>&copy; Copyright: 2018 | Judi Chepkemoi Inc</p>
+      </section>
+      <div class="col-sm-12 company text-center">
+        <div class="row">
+          <div class="col-md-4"></div>
+          <div class="col-md-4">
+            <p>&copy; Copyright: 2019 | Judi Chepkemoi Inc</p>
+          </div>
+          <div class="col-md-4"></div>
         </div>
-        <div class="col-md-4"></div>
       </div>
-    </div>
-  </footer>
+    </footer>
+    <style>
+      .footer{
+        background-color:greenyellow;
+      }
+    </style>
+  </style>
 
   <script
     type="text/javascript">window.$crisp = []; window.CRISP_WEBSITE_ID = "474f8f2a-7c74-4912-8b25-2722a7654e62"; (function () { d = document; s = d.createElement("script"); s.src = "https://client.crisp.chat/l.js"; s.async = 1; d.getElementsByTagName("head")[0].appendChild(s); })();</script>
