--- a/index1.html
+++ b/index1.html
@@ -107,7 +107,7 @@
             <ul class="dropdown-menu">
               <li><a href="index1.html">Who We Are</a></li>
               <li><a href="index3.html">Organization</a></li>
-              <li><a href="gallery.php">Gallery</a></li>
+              <li><a href="index4.html">Gallery</a></li>
               <!--                             <li><a href="downloads.php">Downloads</a></li>
  -->
             </ul>
@@ -259,7 +259,7 @@
     <div class="col-sm-12">
         <div class="row redLine">
             <div class="col-sm-8 col-sm-offset-2 ">
-                <!-- <img src="./assets/img/info-graphics/Services-01.png"> -->
+                <img src="images/process.png">
             </div>
         </div>
     </div>
@@ -287,7 +287,7 @@
                         <!-- <img src="assets/img/icons/Mission.png" style="width: 300px;" class="text-center"> -->
                         <h3 style="color: #e8002d;font-size: 30px;font-weight: bold;">Mission</h3>
                         <p style="font-size: 20px; color: #273277;">Enriching lives through engineering and energy
-                            solutions. Jamwe limited has its central mission
+                            solutions. Rommelo Technologies has its central mission
                             through teamwork, the carrying out of any undertaking safely, professionally and with
                             excellence within the industry.</p>
                     </div>
