--- a/index3.html
+++ b/index3.html
@@ -107,7 +107,7 @@
             <ul class="dropdown-menu">
               <li><a href="index1.html">Who We Are</a></li>
               <li><a href="index3.html">Organization</a></li>
-              <li><a href="gallery.php">Gallery</a></li>
+              <li><a href="index4.html">Gallery</a></li>
               <!--                             <li><a href="downloads.php">Downloads</a></li>
  -->
             </ul>
@@ -243,7 +243,7 @@
     <div class="col-sm-12">
         <div class="row redLine">
             <div class="col-sm-8 col-sm-offset-2 ">
-                <img src="./assets/img/info-graphics/Services-01.png">
+                <img src="images/process.png">
             </div>
         </div>
     </div>
