--- a/index4.html
+++ b/index4.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html lang="en">
 
@@ -44,6 +45,7 @@
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
+
         gtag('config', 'UA-84783047-3');
     </script>
 
@@ -106,9 +108,9 @@
                         <ul class="dropdown-menu">
                             <li><a href="index1.html">Who We Are</a></li>
                             <li><a href="index3.html">Organization</a></li>
-                            <li><a href="gallery.php">Gallery</a></li>
-                            <!--                             <li><a href="downloads.php">Downloads</a></li>
- -->
+                            <li><a href="index4.html">Gallery</a></li>
+                           
+ 
                         </ul>
                     </li>
 
@@ -127,7 +129,7 @@
     <div class="page-header"
         style="padding-top: 9%;background-image:url(images/back.jpg);color: white; min-height: 350px; margin-bottom: -1px; background-size: cover;">
         <div class="col-sm-12">
-            <h1 class="pull-left" style="text-shadow: 3px 3px 5px #000000;">Contact Us</h1>
+            <h1 class="pull-left" style="text-shadow: 3px 3px 5px #000000;">Gallery</h1>
         </div>
     </div>
 
@@ -149,39 +151,26 @@
             </div>
         </div>
     </div>
-
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAKFWBqlKAGCeS1rMVoaNlwyayu0e0YRes&callback=initMap"
-        async defer></script>
-    <!-- <div class="contact100-more">
+    
+            <script
+                src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAKFWBqlKAGCeS1rMVoaNlwyayu0e0YRes&callback=initMap"
+                async defer></script>
+            <!-- <div class="contact100-more">
                 <i class="zmdi zmdi-phone-in-talk"></i>
                 (+100) 345 6389
             </div> -->
-    <div class="container text-center">
+            <div class="container text-center">
 
-        <div class="col-xs-12 col-md-6">
-            <div class="box-model ">
-                <h1>Contact Information</h1>
-                <h2>POSTAL ADDRESS</h2>
-                <P>PO BOX 97-00618, RUARAKA</P>
-                <h2>EMAIL ADDRESS</h2>
-                <P>rommelotechnologies@gmail.com</P>
-                <h2>PHYSICAL LOCATION</h2>
-                <P>Bevkesh House, Ruiru Town along Thika road</P>
-                <h2>CONTACT PERSON<br>Jane Njenga</h2>
-                <P> Office Tel: 0722343243</P>
+                COMING SOON
+
 
             </div>
-
-        </div>
-
-
-    </div>
-    <style>
-        h2 {
-            color: blue;
-            font-size: 125%;
-        }
-    </style>
+        <style>
+            h2{
+                color: blue;
+                font-size: 125%;
+            }
+        </style>
     </div>
 
 
@@ -213,48 +202,48 @@
             opacity: 1;
         }
     </style>
-    <footer class="footer">
-        <section class="col-sm-12 footer">
-            <div class="container">
+     <footer class="footer">
+            <section class="col-sm-12 footer">
+              <div class="container">
                 <div class="text-center">
-                    <h4 class="ourconts">Contact Us</h4>
-                    <hr>
-                    <p>PHYSICAL LOCATION: Bevkesh House, Ruiru Town along Thika road. | POSTAL ADDRESS:PO BOX 97-00618,
-                        RUARAKA.
-                    </p>
-                    <p>Office Tel: +254 722 343243;</p>
-                    <p>REGISTRATION NUMBER: PVT/2016/008776</p>
-                    <p>KRA PIN NUMBER: P051588135Z</p>
-                    <p>LICENCES: NATIONAL CONSTRUCTION AUTHORITY(NCA) </p>
-                    <p>Email: rommelotechnologies@gmail.com</p>
-                    <div>
-                        <a class="smedia" href="https://www.facebook.com/" target="_blank"><i
-                                class="fab fa-facebook-square"></i></a>
-                        <a class="smedia" href="https://twitter.com/"><i class="fab fa-twitter-square"
-                                target="_blank"></i></a>
-                        <a class="smedia" href="https://www.instagram.com/"><i class="fab fa-instagram"
-                                target="_blank"></i></i></a>
-                        <a class="smedia" href="https://www.youtube.com/"><i class="fab fa-youtube"
-                                target="_blank"></i></i></a>
-                    </div>
+                  <h4 class="ourconts">Contact Us</h4>
+                  <hr>
+                  <p>PHYSICAL LOCATION: Bevkesh House, Ruiru Town along Thika road. | POSTAL ADDRESS:PO BOX 97-00618,
+                    RUARAKA.
+                  </p>
+                  <p>Office Tel: +254 722 343243;</p>
+                  <p>REGISTRATION NUMBER: PVT/2016/008776</p>
+                  <p>KRA PIN NUMBER: P051588135Z</p>
+                  <p>LICENCES: NATIONAL CONSTRUCTION AUTHORITY(NCA) </p>
+                  <p>Email: rommelotechnologies@gmail.com</p>
+                  <div>
+                    <a class="smedia" href="https://www.facebook.com/" target="_blank"><i
+                        class="fab fa-facebook-square"></i></a>
+                    <a class="smedia" href="https://twitter.com/"><i class="fab fa-twitter-square"
+                        target="_blank"></i></a>
+                    <a class="smedia" href="https://www.instagram.com/"><i class="fab fa-instagram"
+                        target="_blank"></i></i></a>
+                    <a class="smedia" href="https://www.youtube.com/"><i class="fab fa-youtube"
+                        target="_blank"></i></i></a>
+                  </div>
                 </div>
-            </div>
-        </section>
-        <div class="col-sm-12 company text-center">
-            <div class="row">
+              </div>
+            </section>
+            <div class="col-sm-12 company text-center">
+              <div class="row">
                 <div class="col-md-4"></div>
                 <div class="col-md-4">
-                    <p>&copy; Copyright: 2019 | Judi Chepkemoi Inc</p>
+                  <p>&copy; Copyright: 2019 | Judi Chepkemoi Inc</p>
                 </div>
                 <div class="col-md-4"></div>
+              </div>
             </div>
-        </div>
-    </footer>
-    <style>
-        .footer {
-            background-color: greenyellow;
-        }
-    </style>
+          </footer>
+          <style>
+            .footer{
+              background-color:greenyellow;
+            }
+          </style>
 
 
     <script
