--- a/index8.html
+++ b/index8.html
@@ -107,7 +107,7 @@
                         <ul class="dropdown-menu">
                             <li><a href="index1.html">Who We Are</a></li>
                             <li><a href="index3.html">Organization</a></li>
-                            <li><a href="gallery.php">Gallery</a></li>
+                            <li><a href="index4.html">Gallery</a></li>
                             <!--                             <li><a href="downloads.php">Downloads</a></li>
  -->
                         </ul>
@@ -259,7 +259,7 @@
     <div class="col-sm-12">
         <div class="row redLine">
             <div class="col-sm-8 col-sm-offset-2 ">
-                <!-- <img src="./assets/img/info-graphics/Services-01.png"> -->
+                <img src="images/process.png">
             </div>
         </div>
     </div>
@@ -269,7 +269,7 @@
         <div class="container">
             <h2 class="text-center title" style="padding-bottom: 30px;">QUALITY MANAGEMENT POLICY </h2>
             <div class="col-sm-12">
-                <p class="text-left" style="font-size: 20px;">Jamwe Limited provides a quality system that delivers to our customers and clients
+                <p class="text-left" style="font-size: 20px;">Rommelo Technologies Limited provides a quality system that delivers to our customers and clients
                     value added
                     benefits, by developing long term relationships to better understand customer needs and ensure
                     both suppliers and sub-contractors live up to the standards required.</p>
@@ -283,7 +283,7 @@
                     are performing in the eyes of the customer and do our very best to ensure we provide a
                     competitive advantage due to our standards of quality and our reputation in the marketplace.</p>
                 <h2 class="text-center title" style="padding-bottom: 30px;">ENVIRONMENTAL CONSERVASION POLICY</h2>
-                <p style="font-size: 20px;">Our policy at Jamwe limited is to recognize our responsibility to protect the environment and
+                <p style="font-size: 20px;">Our policy at Rommelo Technologies limited is to recognize our responsibility to protect the environment and
                     minimize any adverse environmental impact of its activities, as far as is safe, practicable and
                     economical, with the objective of being incident free. It is also our practice to identify areas of
                     opportunity to develop an environmentally sustainable business. This is carried out at an overall
