--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <ul class="dropdown-menu">
               <li><a href="index1.html">Who We Are</a></li>
               <li><a href="index3.html">Organization</a></li>
-              <li><a href="gallery.php">Gallery</a></li>
+              <li><a href="index4.html">Gallery</a></li>
               <!--                             <li><a href="downloads.php">Downloads</a></li>
  -->
             </ul>
@@ -152,7 +152,7 @@
   <div class="col-sm-12">
     <div class="row redLine">
       <div class="col-sm-8 col-sm-offset-2 ">
-        <img src="./assets/img/info-graphics/Services-01.png">
+        <img src="images/process.png">
       </div>
     </div>
   </div>
@@ -246,7 +246,7 @@
         <div class="container">
           <div class="col-sm-7 service-info" style="padding-top: 7%;">
             <h3>IMPLEMENTATION, INSTALLATION AND TRAINING</h3>
-            <p style="font-size: 20px;">Jamwe provide project management, planning and implementation, including site
+            <p style="font-size: 20px;">Rommelo Technologies provide project management, planning and implementation, including site
               supervision,
               installation and commissioning for projects of all sizes and complexity. Our technical management
               teams can advise the client on the best selection of products and equipment available from a wide
