--- a/index2.html
+++ b/index2.html
@@ -107,7 +107,7 @@
             <ul class="dropdown-menu">
               <li><a href="index1.html">Who We Are</a></li>
               <li><a href="index3.html">Organization</a></li>
-              <li><a href="gallery.php">Gallery</a></li>
+              <li><a href="index4.html">Gallery</a></li>
               <!--                             <li><a href="downloads.php">Downloads</a></li>
  -->
             </ul>
@@ -226,7 +226,7 @@
     <div class="col-sm-12">
         <div class="row redLine">
             <div class="col-sm-8 col-sm-offset-2 ">
-                <img src="./assets/img/info-graphics/Construction[telk].png">
+                <img src="images/process.png">
             </div>
         </div>
     </div>
@@ -235,13 +235,13 @@
     <div class="col-sm-12">
         <div class="container">
             <h2 class="text-center title" style="padding-bottom: 10px;">Executive</h2>
-            <p class="text-center" style="font-size: 20px;">Jamwe limited is a licensed electrical and building works services contractor under
+            <p class="text-center" style="font-size: 20px;">Rommelo Technologies is a licensed electrical and building works services contractor under
                 category NCA 8.
                 We have been able to secure a standard and well – positioned office facility at Bevkesh House, Ruiru
                 Town along Thika road. We are an electrical contractor services company that is set to compete in
                 the highly competitive electrical contractor services industry not only in Kenya, but also throughout
                 Africa..</p>
-            <p class="text-center" style="font-size: 20px;">Jamwe limited executes electrical work at sites such as construction of powerlines on
+            <p class="text-center" style="font-size: 20px;">Rommelo Technologies executes electrical work at sites such as construction of powerlines on
                 overhead
                 and underground ranges, fiber optic cable installation etc. Basically, we provide services such as
                 electric power and systems installation and servicing, telecommunications installation and
@@ -256,7 +256,7 @@
                 We make sure that we take all the members of our workforce through the required trainings that
                 position them to meet the expectation of the company and to compete with leading electrical
                 contractor services companies.</p>
-            <p style="font-size: 20px;">At Jamwe limited, our client’s best interest always come first, and everything we do is guided by
+            <p style="font-size: 20px;">At Rommelo Technologies, our client’s best interest always come first, and everything we do is guided by
                 our values and professional ethics. We ensure that we hold ourselves accountable to the highest
                 standards by meeting our client’s needs precisely and completely. We cultivate a working
                 environment that provides a human, sustainable approach to earning a living, and living in our
