--- a/index7.html
+++ b/index7.html
@@ -107,7 +107,7 @@
                         <ul class="dropdown-menu">
                             <li><a href="index1.html">Who We Are</a></li>
                             <li><a href="index3.html">Organization</a></li>
-                            <li><a href="gallery.php">Gallery</a></li>
+                            <li><a href="index4.html">Gallery</a></li>
                             <!--                             <li><a href="downloads.php">Downloads</a></li>
  -->
                         </ul>
@@ -259,7 +259,7 @@
     <div class="col-sm-12">
         <div class="row redLine">
             <div class="col-sm-8 col-sm-offset-2 ">
-                <!-- <img src="./assets/img/info-graphics/Services-01.png"> -->
+                <img src="images/process.png">
             </div>
         </div>
     </div>
@@ -274,7 +274,7 @@
                     teams can advise the client on the best selection of products and equipment available from a wide
                     range of suppliers. Our periodic and preventative maintenance service is based on our experience
                     of industry standards and manufacturers recommendations.</p>
-                <p style="font-size: 20px;">Jamwe provides all necessary installation services including:</p>
+                <p style="font-size: 20px;">Rommelo Technologies provides all necessary installation services including:</p>
                 <ul style="font-size: 20px;">
                     <li>Topographical surveys, setting and marking out.</li>
                     <li>Cable trench excavation and construction, pit and duct systems, foundation construction</li>
