--- a/index3.html
+++ b/index3.html
@@ -31,14 +31,14 @@
 
   <title>ROMMELO TECHNOLOGIES</title>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-84783047-3"></script>
+  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-84783047-3"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
     gtag('config', 'UA-84783047-3');
-  </script>
+  </script> -->
 
 </head>
 
