--- a/index4.html
+++ b/index4.html
@@ -29,15 +29,7 @@
 
 
     <title>ROMMELO TECHNOLOGIES</title>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-84783047-3"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-
-        gtag('config', 'UA-84783047-3');
-    </script> -->
+   
 
 </head>
 
@@ -82,7 +74,7 @@
                 <!-- logo -->
                 <a class="navbar-brand" href="index.html">
                     <div id="logo">
-                        <img id="logo3" src="images/favicon-16x16.png" alt="Rommelo">
+                        <img id="logo3" src="images/favicon-16x16.png" width="200%" alt="Rommelo">
                     </div>
                 </a>
                 <!-- /logo -->
@@ -142,8 +134,7 @@
         </div>
     </div>
 
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAKFWBqlKAGCeS1rMVoaNlwyayu0e0YRes&callback=initMap"
-        async defer></script>
+   
     <!-- <div class="contact100-more">
                 <i class="zmdi zmdi-phone-in-talk"></i>
                 (+100) 345 6389
@@ -163,7 +154,7 @@
     </div>
 
 
-    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAKFWBqlKAGCeS1rMVoaNlwyayu0e0YRes"></script> -->
+    
 
     <!-- <script src="ContactForm/js/main.js"></script> -->
     <style type="text/css">
