--- a/index9.html
+++ b/index9.html
@@ -30,13 +30,7 @@
 
     <title>ROMMELO TECHNOLOGIES</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-84783047-3"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-        gtag('config', 'UA-84783047-3');
-    </script> -->
+    
 
 </head>
 
@@ -81,7 +75,7 @@
                 <!-- logo -->
                 <a class="navbar-brand" href="index.html">
                     <div id="logo">
-                        <img id="logo3" src="images/favicon-16x16.png" alt="Rommelo">
+                        <img id="logo3" src="images/favicon-16x16.png" width="200%" alt="Rommelo">
                     </div>
                 </a>
                 <!-- /logo -->
